--- a/api/package.json
+++ b/api/package.json
@@ -12,10 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.2.0",
-    "async-handler": "^0.0.3",
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.0.1"
   },
   "devDependencies": {
